# kittenx

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/onnx/: mod.rs
src/tts/: kitten.rs  mod.rs  phonemizer.rs  text_cleaner.rs  tokenizer.rs
src/utils/: audio.rs  download.rs  mod.rs
