[package]
name = "kittenx"
version = "0.2.0"
edition = "2021"
description = "A pure Rust TTS library and CLI for KittenTTS text-to-speech synthesis - GPU accelerated"
authors = ["KittenML", "Tommy Falkowski"]
license = "GPL-3.0-or-later"
repository = "https://github.com/byteowlz/kittenx"
keywords = ["tts", "text-to-speech", "speech-synthesis", "rust", "gpu"]
categories = ["multimedia::audio", "api-bindings"]

[[bin]]
name = "kittenx"
path = "src/main.rs"

[lib]
name = "kittenx"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ort = { version = "2.0.0-rc.10", default-features = true }
ndarray = "0.16"
ndarray-npy = "0.9"
hf-hub = { version = "0.3", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
hound = "3.5"
lazy_static = "1.5"
reqwest = { version = "0.12", features = ["json"] }
espeak-rs = "0.1"
whatlang = "0.16"

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
tensorrt = ["ort/tensorrt"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
webgpu = ["ort/webgpu"]
